--- a/public/screen.css
+++ b/public/screen.css
@@ -10,3 +10,39 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+header h1 {
+  text-align: center;
+  font-size: 3em;
+  margin-bottom: 1.2rem;
+  color: #57656c;
+}
+
+header ul {
+  list-style: none;
+  background-color: #1b81c1;
+  padding: .5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+header li+li {
+  margin-left: 1rem;
+}
+
+header ul li a {
+  color: #f6f7f7;
+}
+
+footer ul {
+  list-style: none;
+  background-color: #e9d8e0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+footer ul li {
+  margin: 1rem;
+}
