--- a/public/screen.css
+++ b/public/screen.css
@@ -1,3 +1,4 @@
+@import url('https://necolas.github.io/normalize.css/latest/normalize.css');
 :root {
   font: 16px / 1 sans-serif;
 }
@@ -7,11 +8,34 @@ html {
 }
 
 body {
-  margin: 0;
   min-height: 100%;
+  background-color: #16a2de;
+  padding-right: 4rem;
+  padding-left: 4rem;
+}
+
+.kittens-of-day {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 2rem;
+}
+
+.kitten-main-text {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  background-color: #c9cbcb;
+}
+
+header {
+  background-color: #c9cacb;
 }
 
 header h1 {
+  margin: .5rem;
   text-align: center;
   font-size: 3em;
   margin-bottom: 1.2rem;
@@ -25,6 +49,7 @@ header ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 0;
 }
 
 header li+li {
@@ -38,11 +63,16 @@ header ul li a {
 footer ul {
   list-style: none;
   background-color: #e9d8e0;
+  padding: .5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-footer ul li {
-  margin: 1rem;
+footer li+li {
+  margin-left: 1rem;
+}
+
+footer ul li a {
+  color: #1d2121;
 }
