--- a/public/screen.css
+++ b/public/screen.css
@@ -25,7 +25,7 @@ body {
   flex-direction: column;
   padding: .3rem;
   border: solid #0b7d96;
-  margin: 1rem;
+  margin: 1.5rem;
 }
 
 .kittens-of-day h3 {
@@ -106,7 +106,7 @@ header ul li a {
 footer ul {
   list-style: none;
   background-color: rgb(205, 205, 205);
-  padding: .5rem;
+  padding: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
